<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="hello">Hello World, ExpenseCalculatorActivity!</string>
    <string name="app_name">ExpenseCalculator</string>
    <string name="subject">Subject</string>
    <string name="body">Body</string>
    <string name="send">Send</string>
    <string name="sendMessage">SendMessage</string>
    <string name="emailAddress">Email Address</string>
    <string name="readEmail">Check Emails</string>
    <string name="listExpense">List Expense</string>
    <string name="amount">Amount</string>
    <string name="date">Date</string>
    <string name="discription">Discription</string>
    <string name="save">Save</string>
    <string name="name">Name\'</string>
    <string name="rent">Rent</string>
    <string name="addUser">Add User</string>
    <string name="generateSendReport">Generate and Send Report</string>
    <string name="cancel">Cancel</string>
    <string name="full">Full</string>
    <string name="forThisMonth">For this Month</string>
    <string name="generateAndDisplayReport">Generate and Display Report</string>
    <string name="addExpense">Add Expense</string>
    <string name="userName">UserName</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="signUp">Sign Up</string>
    <string name="passworddoesnotMatch">Password doesn\'t match!</string>

</resources>