<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical" >

    <TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/hello" />

    <Button
        android:id="@+id/buttonSendMessage"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/sendMessage" />
    <Button
        android:id="@+id/buttonCheckEmail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/readEmail" />

   <Button
       android:id="@+id/buttonListExpense"
       android:layout_width="wrap_content"
       android:layout_height="wrap_content"
       android:text="@string/listExpense" />

   <Button
       android:id="@+id/buttonAddUser"
       android:layout_width="wrap_content"
       android:layout_height="wrap_content"
       android:text="@string/addUser" />

   <Button
       android:id="@+id/buttonGenerateAndSend"
       android:layout_width="wrap_content"
       android:layout_height="wrap_content"
       android:text="@string/generateSendReport" />

</LinearLayout>