<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <Button
            android:id="@+id/buttonListFull"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/full" />

        <Button
            android:id="@+id/buttonLisForMonth"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/forThisMonth" />

         <Button
             android:id="@+id/buttonLisForPicker"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="@string/datePicker" />
         <Button
             android:id="@+id/buttonLisReport"
             android:layout_width="wrap_content"
             android:layout_height="fill_parent"
             android:text="@string/generateAndDisplayReport" />
        
    </LinearLayout>
<DatePicker
        android:id="@+id/datePickerSelectMonth"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />
   <ListView
        android:id="@+id/editorListView"
        android:layout_width="match_parent"
        android:layout_height="match_parent" >
    </ListView> 

    

</LinearLayout>